tests/fail/semantic/product_invalid_field_access.cyt
record Value(x: int, y: int)
record Result(res: int)

rule (a: Value) -> Result(res: a.z)

// args: --no-colour

// expected stderr:
// error: invalid field `z` on record type `Value`
//   ┌─ ../tests/fail/semantic/product_invalid_field_access.cyt:4:34
//   │
// 1 │ record Value(x: int, y: int)
//   │        ----- field not present in this record
//   ·
// 4 │ rule (a: Value) -> Result(res: a.z)
//   │                                  ^ no such field on type `Value`